:art: Set all "Category" references to singular :sparkles: Return Category on category creation :art: Add data folder to store files
